Setting image sizes on load.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </h1>
     <hr>
     <h3>
-        <span id="breadcrumbs">
+        <span id="breadcrumbs" class="link">
         </span>
     </h3>
     <div id="imgGrid" style="position:center;"></div>
@@ -94,7 +94,7 @@
             if (img < 0) img = 0;
             if (img > tag.images.length - 1) img = tag.images.length - 1;
 
-            document.getElementById('imgGrid').innerHTML = `<center><img src="${imageJSON.webDir}${tag.location}/large/${tag.images[img]}${imageJSON.imgExt}"><br>${tag.images[img]}</center>`;
+            document.getElementById('imgGrid').innerHTML = `<center><img class="largeImage" src="${imageJSON.webDir}${tag.location}/large/${tag.images[img]}${imageJSON.imgExt}"><br>${tag.images[img]}<br><span class="link" onclick="openImage(--imgPointer)">Previous</span>&nbsp;<span class="link" onclick="openImage(++imgPointer)">Next</span></center>`;
             imgPointer = img;
         }
         document.onkeydown = checkKey;
