Seperated image grid JavaScript into its own file.

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
 
     </title>
     <script type="text/javascript" src="images.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <!--Disables rightclick and dragging images (to stop image stealing)
-    <script type="text/javascript" language="javascript">
+    <!--Disables rightclick and dragging images (to stop image stealing)-->
+    <!--script type="text/javascript" language="javascript">
         $(document).ready(function () {
             $('img').on('dragstart', function (event) { event.preventDefault(); });
             $(document).bind("contextmenu", function (e) {
                 return false;
             });
         }); 
-    </script>
-    <!---->
+    </script-->
 </head>
 
 <body>
@@ -30,89 +29,8 @@
     </h3>
     <div id="imgGrid" style="position:center;"></div>
 
-    <script>
-        let depth = [];
-        init();
-        let imgPointer = 0;
+    <script type="text/javascript" src="display.js"></script>
 
-        function init() {
-            depth = [];
-            clearGrid();
-            document.getElementById('titleSpan').innerHTML = imageJSON.compName;
-            for (let i = 0; i < imageJSON.subfolder.length; i++) {
-                document.getElementById('imgGrid').innerHTML += `<div class="pics" onclick="addDepth(${i});"><h2>${imageJSON.subfolder[i].title}</h2>${imageJSON.subfolder[i].subtitle ? imageJSON.subfolder[i].subtitle : ''}</div>`;
-            }
-            document.getElementById('breadcrumbs').innerHTML = '<span onclick="diveDepth(-1)">Home > </span>';
-        }
-
-        function addDepth(d) {
-            depth.push(d);
-            let tag = imageJSON;
-            for (let i = 0; i < depth.length; i++) {
-                tag = tag.subfolder[depth[i]];
-            }
-            document.getElementById('breadcrumbs').innerHTML += `<span onclick="diveDepth(${depth.length - 1})">${tag.title} > </span>`;
-            clearGrid();
-            if (tag.subfolder) {
-                for (let i = 0; i < tag.subfolder.length; i++) {
-                    document.getElementById('imgGrid').innerHTML += `<div class="pics" onclick="addDepth(${i});"><h2>${tag.subfolder[i].title}</h2>${tag.subfolder[i].subtitle}</div>`;
-                }
-            } else {
-                for (let i = 0; i < tag.images.length; i++) {
-                    document.getElementById('imgGrid').innerHTML += `<div class="pics img" onclick="openImage(${i})"><img src="${imageJSON.webDir}${tag.location}/thumb/${tag.images[i]}${imageJSON.imgExt}"></div>`;
-                }
-            }
-        }
-
-        function diveDepth(d) {
-            if (d < 0) {
-                init();
-            } else {
-                depth.length = d + 1;
-                let tag = imageJSON;
-                document.getElementById('breadcrumbs').innerHTML = '<span onclick="diveDepth(-1)">Home > </span>';
-                for (let i = 0; i < d; i++) {
-                    tag = tag.subfolder[depth[i]];
-                    document.getElementById('breadcrumbs').innerHTML += `<span onclick="diveDepth(${i})">${tag.title} > </span>`;
-                }
-                addDepth(depth.pop());
-            }
-        }
-
-        function clearGrid() {
-            document.getElementById('imgGrid').innerHTML = '';
-        }
-
-        function openImage(img) {
-            clearGrid();
-
-            let tag = imageJSON;
-            for (let i = 0; i < depth.length; i++) {
-                tag = tag.subfolder[depth[i]];
-            }
-
-            if (img < 0) img = 0;
-            if (img > tag.images.length - 1) img = tag.images.length - 1;
-
-            document.getElementById('imgGrid').innerHTML = `<center><img class="largeImage" src="${imageJSON.webDir}${tag.location}/large/${tag.images[img]}${imageJSON.imgExt}"><br>${tag.images[img]}<br><span class="link" onclick="openImage(--imgPointer)">Previous</span>&nbsp;<span class="link" onclick="openImage(++imgPointer)">Next</span></center>`;
-            imgPointer = img;
-        }
-        document.onkeydown = checkKey;
-
-        function checkKey(e) {
-            e = e || window.event;
-            if (e.keyCode == '37') {
-                // left arrow
-                openImage(--imgPointer);
-            }
-            else if (e.keyCode == '39') {
-                // right arrow
-                openImage(++imgPointer);
-            }
-
-        }
-
-    </script>
 </body>
 
 </html>
